# Aesthetic_image_filter

./: CMakeLists.txt  Problem Study and Solution Proposal_v2.docx  README.md  filters.cpp  filters.h  main.cpp
PROJECT_TESTS/: emboss_test.py  posterize_test.py  sharpen_test.py  sobel_test.py
